tests/negative/gold/default_values_test.gold
tests/negative/default_values_test.toit:6:11: error: Parameter without default-value, after an earlier parameter had a default-value
foo x=499 y:
          ^
tests/negative/default_values_test.toit:6:5: note: Parameter with default_value
foo x=499 y:
    ^
tests/negative/default_values_test.toit:7:14: error: Unresolved identifier: 'unresolved'
  return x + unresolved
             ^~~~~~~~~~
Compilation failed.
